[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = "focus"
version = "0.1.0"
authors = [{ name = "Stephen Alexander Lee", email = "stephenlee32904@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
description = "High-resolution imaging of the AngioarKitecture via Ultrasound"
dependencies = [
"h5py==2.10.0",
"numpy==1.18.5",
"scipy==1.4.1",
"natsort==7.0.1",
"matplotlib==3.3.2",
"numba==0.51.2"
]
[project.urls]
Homepage = "https://github.com/StephenAlexanderLee/fUS-imaging"

[template.plugins.default]
src-layout = true
